--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/socialmedia
+spring.datasource.url=jdbc:mysql://mysqldockercontainer:3306/socialmedia
 spring.datasource.username=root
-spring.datasource.password=mydreamisbig
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
